step5 수정 필요